--- a/package.json
+++ b/package.json
@@ -46,11 +46,14 @@
   "devDependencies": {
     "@parcel/packager-ts": "2.8.3",
     "@parcel/transformer-typescript-types": "2.8.3",
+    "@types/inquirer": "^9.0.3",
     "@types/jest": "^27.0.1",
     "@types/node": "^18.14.0",
     "@types/node-emoji": "^1.8.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "chalk": "^5.2.0",
+    "commander": "^10.0.0",
     "del": "^7.0.0",
     "esbuild": "^0.17.10",
     "eslint": "^8.0.1",
@@ -62,15 +65,15 @@
     "inquirer": "^9.1.4",
     "jest": "^27.2.5",
     "lint-staged": "^13.1.0",
+    "node-emoji": "^1.11.0",
+    "ora": "^6.1.2",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "4.5.2",
-    "chalk": "^5.2.0",
-    "commander": "^10.0.0",
-    "node-emoji": "^1.11.0",
-    "ora": "^6.1.2"
+    "axios": "^1.3.4",
+    "joi": "^17.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
